fix user profile page grid layout shift on mobile devices

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,7 +1,7 @@
 .modal {
   background-color: var(--background-modal, #cacaca);
 }
-.profile {
+.grid-rows {
   display: grid;
   grid-template-columns: minmax(120px, 1fr) minmax(120px, 2fr);
   column-gap: 20px;
@@ -17,11 +17,6 @@
   background-color: var(--background-modal, #cacaca);
   padding: 0;
   min-width: 150px;
-}
-@media screen and (max-width: 576px) {
-  .profile {
-    grid-template-columns: minmax(200px, 1fr);
-  }
 }
 
 .upload-button {
